k8/deployment-0.0.7.yaml
# label of status: released' indicates the version that's considered released in
# that namespace
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customerservice-vv0.0.6
  namespace: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customerservice
        version: v0.0.6
        status: pending
    spec:
      imagePullSecrets:
      - name: thoughtworks-aelab-di-circleci-quayio-deploy-user-pull-secret
      containers:
      - name: service
        image: quay.io/thoughtworks_aelab/customerservice:0.0.6-91
        imagePullPolicy: Always
        ports:
          - name: service
            containerPort: 8082
          - name: readiness
            containerPort: 8083
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
