k8/customerservice-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: customerservice
  namespace: {NAMESPACE}
  labels:
    app: customerservice
spec:
  ports:
  - port: 8082
    name: http
  selector:
    app: customerservice
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customerservice-v{VERSION}
  namespace: {NAMESPACE}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: customerservice
        version: v{VERSION}
    spec:
      imagePullSecrets:
      - name: thoughtworks-aelab-di-circleci-quayio-deploy-user-pull-secret
      containers:
      - name: service
        image: quay.io/thoughtworks_aelab/customerservice:{DOCKER_TAG}
        imagePullPolicy: Always
        ports:
          - name: service
            containerPort: 8082
          - name: readiness
            containerPort: 8083
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
