k8/network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customerservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerservice
spec:
  hosts:
  - "*"
  gateways:
  - customerservice-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customerservice
        port:
          number: 8082
