k8/virtual-service-header.yaml
# Header based testing VirtualService
# Sets up a weight for the canary releases
# it does however setup a new VS in the right namespace as the service
# moves from dev -> test -> prod
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerservice-virtualservice
  namespace: dev
spec:
  hosts:
  - "customerservice.dev.start.twdps.io"
  gateways:
  - customerservice-gateway
  - mesh
  http:
  - match:
    - headers:
        x-test:
          exact: 0.0.6-91
    route:
    - destination:
        host: customerservice
        subset: 0-0-7
  - route:
    - destination:
        host: customerservice
        subset: LATEST
    timeout: 2s # initial timeout before declaring a 503 or triggering an initial retry
    retries: # example setup for retries and timeout that triggers a new retry
      attempts: 3
      perTryTimeout: 2s
