k8/virtualservice-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerservice
  namespace: {NAMESPACE}
spec:
  hosts:
  - "dev.start.twdps.io"
  gateways:
  - customerservice-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customerservice
        port:
          number: 8082
