k8/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customerservice
spec:
  hosts:
  - "*"
  gateways:
  - dev-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        port:
          number: 8082
        host: customerservice.default.svc.cluster.local
